--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
  $Author: fsalcher $
  $Revision: 18783 $
  $Date: 2012-03-19 15:12:54 +0100 (Mo, 19 Mär 2012) $
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+--><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.easyrec</groupId>
@@ -55,7 +54,7 @@
                 <role>Java developer</role>
                 <role>Senior scientist</role>
             </roles>
-            <timezone />
+            <timezone/>
         </developer>
         <developer>
             <id>szavrel</id>
@@ -66,7 +65,7 @@
                 <role>Java developer</role>
                 <role>Scientist</role>
             </roles>
-            <timezone />
+            <timezone/>
         </developer>
         <developer>
             <id>rcerny</id>
@@ -77,7 +76,7 @@
                 <role>Java developer</role>
                 <role>Scientist</role>
             </roles>
-            <timezone />
+            <timezone/>
         </developer>
         <developer>
             <id>pmarschik</id>
@@ -88,7 +87,7 @@
                 <role>Java developer</role>
                 <role>Scientist</role>
             </roles>
-            <timezone />
+            <timezone/>
         </developer>
     </developers>
 
@@ -595,7 +594,7 @@ to be able to deploy and site-deploy during daily/nightly builds -->
         <module>easyrec-plugins</module>
         <module>easyrec-web</module>
 <!--        <module>easyrec-mahout</module>-->
-    </modules>
+  </modules>
 
     <dependencies>
         <dependency>
